objects/Funding__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name_Funding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Funding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account_Legal_Name_Funding__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Entity__c</fullName>
        <description>Roll-up Summary of Billing Entity records under the Funding Record.</description>
        <label>Billing Entity</label>
        <summaryForeignKey>Billing__c.Funding_Master__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Billing_Specifics__c</fullName>
        <formula>&quot;If variations exist between multiple entities, please make your selections below for each one, otherwise just complete Entity 1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Specifics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Bill_go_to_Group_or_COBRA_TPA__c</fullName>
        <inlineHelpText>Will COBRA Bill/Invoice Go To The Group Or To The COBRA TPA - West ONLY</inlineHelpText>
        <label>COBRA Bill Go To Group Or COBRA TPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA_Premium_paid_by_Group_or_TPA__c</fullName>
        <inlineHelpText>Will COBRA Premium Be Paid By Group Or COBRA TPA - West ONLY</inlineHelpText>
        <label>COBRA Premium Paid By Group Or TPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA_TPA_using_non_BC_Enrollment_Form__c</fullName>
        <inlineHelpText>Will COBRA TPA Be Using A Non Blue Cross Enrollment Form - West ONLY</inlineHelpText>
        <label>COBRA TPA Using Non BC Enrollment Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_to_an_alternative_funding_account__c</fullName>
        <inlineHelpText>Will This Be Changed To An Alternative Funding Account?</inlineHelpText>
        <label>Change To An Alternative Funding Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Funding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>TPA_Contact_Name__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_allowance_for_Marketing__c</fullName>
        <inlineHelpText>Are There Communication Allowances For Marketing Materials</inlineHelpText>
        <label>Communication Allowance For Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Different_contacts_at_suffix_level__c</fullName>
        <inlineHelpText>If You Have More Than 3 Contacts, Please Attach Separate Documentation To The Implementations Case Record Specifying The Contact Information Per Suffix Breakout.</inlineHelpText>
        <label>Different Contacts At Suffix Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipName>Funding</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>If_yes_Please_explain_Fund_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Yes, Please Explain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Case Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Record ID</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Funding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_HCID_on_the_invoice_West_WGS__c</fullName>
        <inlineHelpText>Would The Client Like To Include HCID# On The Invoice (West/WGS)</inlineHelpText>
        <label>Include HCID# On The Invoice (West/WGS)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>More_than__c</fullName>
        <inlineHelpText>Each Bill Entity Can Not Contain More Than 900 Suffixes Due To System Limitations.</inlineHelpText>
        <label>More Than One Bill Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Funding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>TPA_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premiums_Recd_From_More_Than_one_Source__c</fullName>
        <label>Premiums Recd From More Than One Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reinsurance_Carrier_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinsurance Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reinsurance_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reinsurance Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Funded_with_Reinsurance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Add Contact</inlineHelpText>
        <label>Self-Funded with Reinsurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Contact__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Funding__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TPA_Contact_Name__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Carrier_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stop Loss Carrier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Plan_Description__c</fullName>
        <label>Stop Loss Plan Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aggregate</fullName>
                </value>
                <value>
                    <fullName>Specific</fullName>
                </value>
                <value>
                    <fullName>Both Aggregate and Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_Funding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>TPA_Contact_Name__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPAContactName__c</fullName>
        <formula>TPA_Contact_Name__r.ContactTypeAhead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPAContactName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>There Must Be A Contact Record In The System For This Search. If You Cannot Find The Name You May Need To First Create A New Contact By Clicking &apos;Contact&apos; Tab Across Top And Creating A Record.</inlineHelpText>
        <label>TPA Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Funding (WGS Only)</relationshipLabel>
        <relationshipName>Funding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Washout_Code_16__c</fullName>
        <formula>&quot;WASHOUT CODE = 16 Enrollment: Enrollment 1st- 15th, Premium due on 1st of the same month. Enrollment 16th-31st, premium due from 1st of next month.Contract Change: Date of events 1st- 15th, Premium due from 1st of the same month. Date of events 16th-31st, premium due from 1st of next month. Terminations: Benefits terminated 1st- 15th, Premium due on 1st of the same month. Terminated 16th-31st, premium credited from 1st of next month.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Washout Code = 16</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Washout_Code_1__c</fullName>
        <formula>&quot;WASHOUT CODE = 01 All Events: Dates of events occuring on the 1st - 31st, reflected in premium 1st of the following month.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Washout Code = 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Washout_Code_2__c</fullName>
        <formula>&quot;WASHOUT CODE = 02 Enrollment: Enrollment on 1st, Premium due on 1st of the same month. Enrollment on 2nd-31st, premium due from 1st of next month.Contract Change: Dates of events occurring on the 1st, premium for new contract type due from the 1st of same month. 2nd-31st, due next month.Terminations: Benefits terminated on 1st, premium credited from the 1st of same month. 2nd-31st, credited next month.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Washout Code = 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Funding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>TPA_Contact_Name__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Funding (WGS Only)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FUND-{000000}</displayFormat>
        <label>Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding (WGS Only)</pluralLabel>
    <recordTypes>
        <fullName>Funding</fullName>
        <active>true</active>
        <label>Funding</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Funding_VR01_Do_Not_Create_More</fullName>
        <active>false</active>
        <errorConditionFormula>Group__r.Funding_Count__c &gt; 1</errorConditionFormula>
        <errorMessage>Please do not create another Funding record when already one exists</errorMessage>
    </validationRules>
</CustomObject>